# controller-logic

./: .gitignore  CMakeLists.txt  README.md  meson.build
cmake/toolchains/: tricore-gcc-toolchain.cmake
libs/esx3cs_bios/: esx3cs_link_cached_intflash.ld  esx3cs_link_debug.ld  esx3cs_link_intflash.ld  esx3cs_link_signature_v4.ld  intrinsics.h  memtypes.h  stdtypes.h  stwerrors.h  stwtypes.h  tricore_std_sections_begin.ld  tricore_std_sections_end.ld  x_can.h  x_can_types.h  x_eep.h  x_eep_types.h  x_esx3cs.h  x_eth.h  x_eth_types.h  x_in.h  x_lib.h  x_lin.h  x_lin_types.h  x_memclass.h  x_mpu.h  x_mpu_types.h  x_os.h  x_os_mbox.h  x_os_mutex.h  x_os_sema.h  x_os_signal.h  x_os_types.h  x_osf.h  x_out.h  x_out_relay.h  x_ser.h  x_ser_types.h  x_ssv.h  x_stdtypes.h  x_sys.h  x_sys_adc.h  (+3 more)
libs/esx3cs_osy/: osy_com_cl2_driver.h  osy_com_configuration.h  osy_com_eces_driver.h  osy_com_ecos_driver.h  osy_com_engine.h  osy_com_trg_definitions.h  osy_com_trg_if.h  osy_ctp_messageprocessor.h  osy_ctp_router.h  osy_ctp_trg.h  osy_ctp_trg_if.h  osy_dpa_application_event_handler_if.h  osy_dpa_data_pool.h  osy_dpa_trg_data_protector.h  osy_dpa_trg_definitions.h  osy_dpd_data.h  osy_dpd_driver.h  osy_dpd_eventdriventransmissionhandler.h  osy_dph_data_pool_protector.h  osy_dph_data_set_handler.h  osy_dph_init.h  osy_dph_nvm_handler.h  osy_dph_value_range_handler.h  osy_etp_messageprocessor.h  osy_etp_trg.h  osy_etp_trg_if.h  osy_trg_init.h  osy_udc_global_init.h  osy_uds_connectionhandler.h  osy_uds_globals.h  osy_uds_sessionengine.h
libs/isobus/: ConvertIOP.pl  DDObjectPoolCreator.py  Foundation.h  ParseIOP.pm  (+5 more)
pjt/: 1.1.1.cscope_file_list  1.1.1.depend  controllerLogic.cbp  controllerLogic.layout  cscope.out  isobus_template.layout
src/: IOMapping.h  NVStorage.c  NVStorage.h  ScheduleTasksHere.h  Solution.c  Solution.h  TaskScheduler.c  TaskScheduler.h  Testing.c  Testing.h  can_j1939.c  can_j1939.h  can_j1939_user.c  can_j1939_user.h  controller_logic.c  controller_logic.h  controller_logic_context.c  controller_logic_context.h  general.h  j1939_user_parameters.c  j1939_user_parameters.h  main.c  main.h  platform_config.h  user_parameters.c  user_parameters.h
test/: meson.build  test.cpp  test_controller_logic.cpp  test_controller_logic_init.cpp  test_easing_strategy.cpp
test_proj/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
(+124 files in other folders)
